<resources>
    <string name="app_name">Realm Browser Sample</string>

    <string name="prompt_name">User name</string>
    <string name="prompt_address">User address</string>
    <string name="prompt_manufacturer">Device manufacturer</string>
    <string name="prompt_model">Device model</string>

    <string name="action_create">Create</string>
    <string name="action_update">Update</string>
    <string name="action_cancel">Cancel</string>

    <string name="error_field_required">This field is required</string>
    <string name="error_user_name_field_required">User name field is required</string>
    <string name="user_data">USER DATA</string>
    <string name="device">DEVICE</string>
    <string name="software_name">Name operation system</string>
    <string name="operationSystem">OPERATION SYSTEM</string>
    <string name="version">Version</string>
    <string name="telephone_number">Telephone number</string>
    <string name="email">Email</string>
    <string name="cancel">cancel</string>
    <string name="ok">Ok</string>

</resources>
